--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -71,7 +71,7 @@
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -112,7 +112,7 @@
                 </div>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseGover"
                     aria-expanded="true" aria-controls="collapseGover">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -131,7 +131,7 @@
                 </div>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask"
                     aria-expanded="true" aria-controls="collapseMask">
                     <i class="fas fa-fw fa-file-alt"></i>
@@ -140,7 +140,7 @@
                 <div id="collapseMask" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">마스크 보급소 위치</h6>
+                        <h6 class="collapse-header">마스크 보급소 위치 / 재고량</h6>
                         <a class="collapse-item" href="mask_post_office.html">우체국</a>
                         <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map"
                             target="_blank">약국</a>
@@ -149,13 +149,13 @@
                 </div>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseVolunteer"
                     aria-expanded="true" aria-controls="collapseVolunteer">
                     <i class="fas fa-fw fa-donate"></i>
                     <span>관련 봉사/지원</span>
                 </a>
-                <div id="collapseVolunteer" class="collapse" aria-labelledby="volunteer"
+                <div id="collapseVolunteer" class="collapse" aria-labelledby="volunteer" style="z-index: 2;">
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">관련 봉사/지원</h6>
@@ -175,16 +175,16 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSite"
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSite" style="z-index: 2;">
                     aria-expanded="true" aria-controls="collapseSite">
                     <i class="fas fa-fw fa-file-alt"></i>
                     <span>기타 현황 사이트</span>
                 </a>
-                <div id="collapseSite" class="collapse" aria-labelledby="headingUtilities"
+                <div id="collapseSite" class="collapse" aria-labelledby="headingUtilities" style="z-index: 2;">
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">현황,발생 추이 확인가능</h6>
-                        <a class="collapse-item" href="http://livecorona.co.kr/" target="_blank">라이브 코로나맵</a>
+                        <a class="collapse-item" href="https://coronamap.site/" target="_blank">코로나맵</a>
                         <a class="collapse-item" href="https://www.coronanow.kr/" target="_blank">코로나나우</a>
                         <a class="collapse-item" href="https://wuhanvirus.kr/" target="_blank">코로나19 실시간 상황판</a>
                         <a class="collapse-item"
