--- a/public/index.html
+++ b/public/index.html
@@ -206,10 +206,9 @@
         </a>
         <div id="collapseMask" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">마스크 보급소 위치</h6>
+            <h6 class="collapse-header">마스크 보급소 위치 / 재고량</h6>
             <a class="collapse-item" href="mask_post_office.html">우체국</a>
-            <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map"
-              target="_blank">약국</a>
+            <a class="collapse-item" href="pharmacy.html">약국</a>
             <a class="collapse-item" href="https://coronamask.kr/" target="_blank">온라인 구입(코로나마스크)</a>
           </div>
         </div>
