--- a/public/prevent_corona.html
+++ b/public/prevent_corona.html
@@ -141,10 +141,9 @@
         </a>
         <div id="collapseMask" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">마스크 보급소 위치</h6>
+            <h6 class="collapse-header">마스크 보급소 위치 / 재고량</h6>
             <a class="collapse-item" href="mask_post_office.html">우체국</a>
-            <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map"
-              target="_blank">약국</a>
+            <a class="collapse-item" href="pharmacy.html">약국</a>
             <a class="collapse-item" href="https://coronamask.kr/" target="_blank">온라인 구입(코로나마스크)</a>
           </div>
         </div>
@@ -182,7 +181,7 @@
         <div id="collapseSite" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">현황,발생 추이 확인가능</h6>
-            <a class="collapse-item" href="http://livecorona.co.kr/" target="_blank">라이브 코로나맵</a>
+            <a class="collapse-item" href="https://coronamap.site/" target="_blank">코로나맵</a>
             <a class="collapse-item" href="https://www.coronanow.kr/" target="_blank">코로나나우</a>
             <a class="collapse-item" href="https://wuhanvirus.kr/" target="_blank">코로나19 실시간 상황판</a>
             <a class="collapse-item"
@@ -226,7 +225,7 @@
           </button>
 
           <!-- Topbar Search -->
-          <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+          <!-- <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
             <div class="input-group">
               <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
                 aria-label="Search" aria-describedby="basic-addon2">
@@ -236,7 +235,7 @@
                 </button>
               </div>
             </div>
-          </form>
+          </form> -->
 
           <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto">
