--- a/public/corona_law.html
+++ b/public/corona_law.html
@@ -144,7 +144,7 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask"
                     aria-expanded="true" aria-controls="collapseMask">
                     <i class="fas fa-fw fa-file-alt"></i>
-                    <span>마스크 보급 위치</span>
+                    <span>마스크 보급 위치 / 재고량</span>
                 </a>
                 <div id="collapseMask" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
