--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -53,7 +53,7 @@
             <!-- Divider -->
             <hr class="sidebar-divider">
 
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseVirus"
                     aria-expanded="true" aria-controls="collapseVirus">
                     <i class="fas fa-fw fa-search"></i>
@@ -135,7 +135,7 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask"
                     aria-expanded="true" aria-controls="collapseMask">
                     <i class="fas fa-fw fa-file-alt"></i>
-                    <span>마스크 보급 위치</span>
+                    <span>마스크 보급 위치 / 재고량</span>
                 </a>
                 <div id="collapseMask" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
@@ -181,7 +181,6 @@
                     <span>기타 현황 사이트</span>
                 </a>
                 <div id="collapseSite" class="collapse" aria-labelledby="headingUtilities" style="z-index: 2;">
-                    data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">현황,발생 추이 확인가능</h6>
                         <a class="collapse-item" href="https://coronamap.site/" target="_blank">코로나맵</a>
