--- a/public/about_corona.html
+++ b/public/about_corona.html
@@ -137,7 +137,7 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask" aria-expanded="true"
           aria-controls="collapseMask">
           <i class="fas fa-fw fa-file-alt"></i>
-          <span>마스크 보급 위치</span>
+          <span>마스크 보급 위치 / 재고량</span>
         </a>
         <div id="collapseMask" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
