--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -175,7 +175,8 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSite" style="z-index: 2;">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSite"
+                    style="z-index: 2;">
                     aria-expanded="true" aria-controls="collapseSite">
                     <i class="fas fa-fw fa-file-alt"></i>
                     <span>기타 현황 사이트</span>
@@ -301,6 +302,59 @@
                                 })
                             }
                         })
+                    }
+
+                    function load_map() {
+                        kakao.maps.event.addListener(map, 'center_changed', function () {
+
+                            // 지도의 중심좌표를 얻어옵니다 
+                            var latlng = map.getCenter();
+                            var loc = "?lat=" + latlng.getLat() + "&lng=" + latlng.getLng() + "&m=5000";
+                            var url = "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/storesByGeo/json" + loc
+                            $.ajax({
+                                type: "GET",
+                                url: url,
+                                dataType: "json",
+                                success: function (data) {
+                                    $.each(data.stores, function (i, stores) {
+                                        var name = stores.name;
+                                        var status = stores.remain_stat
+                                        console.log(status)
+                                        var remain;
+                                        if (status == "empty") {
+                                            remain = "품절"
+                                            console.log(remain)
+                                        } else if (status == null) {
+                                            remain = "정보 없음"
+                                            console.log(remain)
+                                        } else {
+                                            remain = status;
+                                            console.log(remain)
+                                        }
+                                        var position = new kakao.maps.LatLng(stores.lat, stores.lng);
+                                        var marker = new kakao.maps.Marker({
+                                            map: map,
+                                            position: position,
+                                            clickable: true
+                                        });
+                                        var iwContent = '<div class = "text-center" style="padding:5px;">' + name + '</div><br>' + remain + '</br>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                                            iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
+
+                                        // 인포윈도우를 생성합니다
+                                        var infowindow = new kakao.maps.InfoWindow({
+                                            content: iwContent,
+                                            removable: iwRemoveable
+                                        });
+
+                                        // 마커에 클릭이벤트를 등록합니다
+                                        kakao.maps.event.addListener(marker, 'click', function () {
+                                            infowindow.open(map, marker);
+                                        });
+                                    })
+                                }
+                            })
+
+                        });
                     }
                 </script>
 
