--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -44,7 +44,7 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>종합 상황</span></a>
@@ -53,7 +53,13 @@
             <!-- Divider -->
             <hr class="sidebar-divider">
 
-            <li class="nav-item" style="z-index: 2;">
+            <!-- Heading -->
+            <!-- <div class="sidebar-heading">
+                국내 상황
+              </div> -->
+
+            <!-- Nav Item - Pages Collapse Menu -->
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseVirus"
                     aria-expanded="true" aria-controls="collapseVirus">
                     <i class="fas fa-fw fa-search"></i>
@@ -65,13 +71,12 @@
                         <h6 class="collapse-header">코로나 바이러스</h6>
                         <a class="collapse-item" href="about_corona.html">코로나 바이러스란?</a>
                         <a class="collapse-item" href="prevent_corona.html">코로나 예방법 및 대처법</a>
-
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item" style="z-index: 2;">
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -89,7 +94,16 @@
                     </div>
                 </div>
             </li>
-            <li class="nav-item" style="z-index: 2;">
+
+            <!-- Divider -->
+            <!-- <hr class="sidebar-divider"> -->
+
+            <!-- Heading -->
+            <!-- <div class="sidebar-heading">
+                Addons
+              </div> -->
+            <!-- Nav Item - Pages Collapse Menu -->
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -112,7 +126,7 @@
                 </div>
             </li>
 
-            <li class="nav-item" style="z-index: 2;">
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseGover"
                     aria-expanded="true" aria-controls="collapseGover">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -131,7 +145,7 @@
                 </div>
             </li>
 
-            <li class="nav-item" style="z-index: 2;">
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask"
                     aria-expanded="true" aria-controls="collapseMask">
                     <i class="fas fa-fw fa-file-alt"></i>
@@ -142,20 +156,19 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">마스크 보급소 위치 / 재고량</h6>
                         <a class="collapse-item" href="mask_post_office.html">우체국</a>
-                        <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map"
-                            target="_blank">약국</a>
+                        <a class="collapse-item" href="pharmacy.html">약국</a>
                         <a class="collapse-item" href="https://coronamask.kr/" target="_blank">온라인 구입(코로나마스크)</a>
                     </div>
                 </div>
             </li>
 
-            <li class="nav-item" style="z-index: 2;">
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseVolunteer"
                     aria-expanded="true" aria-controls="collapseVolunteer">
                     <i class="fas fa-fw fa-donate"></i>
                     <span>관련 봉사/지원</span>
                 </a>
-                <div id="collapseVolunteer" class="collapse" aria-labelledby="volunteer" style="z-index: 2;">
+                <div id="collapseVolunteer" class="collapse" aria-labelledby="volunteer"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">관련 봉사/지원</h6>
@@ -176,12 +189,12 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSite"
-                    style="z-index: 2;">
                     aria-expanded="true" aria-controls="collapseSite">
                     <i class="fas fa-fw fa-file-alt"></i>
                     <span>기타 현황 사이트</span>
                 </a>
-                <div id="collapseSite" class="collapse" aria-labelledby="headingUtilities" style="z-index: 2;">
+                <div id="collapseSite" class="collapse" aria-labelledby="headingUtilities"
+                    data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">현황,발생 추이 확인가능</h6>
                         <a class="collapse-item" href="https://coronamap.site/" target="_blank">코로나맵</a>
@@ -196,7 +209,7 @@
             </li>
 
             <!-- Nav Item - Charts -->
-            <li class="nav-item" style="z-index: 2;">
+            <li class="nav-item">
                 <a class="nav-link" href="qeustion.html">
                     <i class="fas fa-fw fa-comments"></i>
                     <span>문의</span></a>
