--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -44,7 +44,7 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
-            <li class="nav-item active">
+            <li class="nav-item active" style="z-index: 2;">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>종합 상황</span></a>
@@ -59,7 +59,7 @@
               </div> -->
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseVirus"
                     aria-expanded="true" aria-controls="collapseVirus">
                     <i class="fas fa-fw fa-search"></i>
@@ -76,7 +76,7 @@
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -103,7 +103,7 @@
                 Addons
               </div> -->
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -126,7 +126,7 @@
                 </div>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseGover"
                     aria-expanded="true" aria-controls="collapseGover">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -145,7 +145,7 @@
                 </div>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask"
                     aria-expanded="true" aria-controls="collapseMask">
                     <i class="fas fa-fw fa-file-alt"></i>
@@ -162,7 +162,7 @@
                 </div>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseVolunteer"
                     aria-expanded="true" aria-controls="collapseVolunteer">
                     <i class="fas fa-fw fa-donate"></i>
@@ -187,7 +187,7 @@
                 </div>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSite"
                     aria-expanded="true" aria-controls="collapseSite">
                     <i class="fas fa-fw fa-file-alt"></i>
@@ -209,7 +209,7 @@
             </li>
 
             <!-- Nav Item - Charts -->
-            <li class="nav-item">
+            <li class="nav-item" style="z-index: 2;">
                 <a class="nav-link" href="qeustion.html">
                     <i class="fas fa-fw fa-comments"></i>
                     <span>문의</span></a>
@@ -335,13 +335,13 @@
                                         var remain;
                                         if (status == "empty") {
                                             remain = "품절"
-                                            console.log(remain)
+                                            //console.log(remain)
                                         } else if (status == null) {
                                             remain = "정보 없음"
-                                            console.log(remain)
+                                            //console.log(remain)
                                         } else {
                                             remain = status;
-                                            console.log(remain)
+                                            //console.log(remain)
                                         }
                                         var position = new kakao.maps.LatLng(stores.lat, stores.lng);
                                         var marker = new kakao.maps.Marker({
