--- a/public/pharmacy.html
+++ b/public/pharmacy.html
@@ -239,6 +239,7 @@
                 <script>
                     var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
                         center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표 
+                        maxLevel: 4,
                         level: 2 // 지도의 확대 레벨 
                     });
 
